虚拟机参数说明20180625